<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="340dp"
        android:layout_height="400dp"
        android:background="@drawable/bg_dialog_game_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/scoreTextView"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/new_best_score"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/score"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:backgroundTint="#ACBBE4"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/scoresTextView"
                style="@style/BasicText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="4dp"
                app:autoSizeTextType="uniform"
                tools:text="340" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/would_you_like_to_play_again"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <com.fly.flyingplane.core.CustomImageButton
            android:id="@+id/buttonOk"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/img_button_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/center" />

        <com.fly.flyingplane.core.CustomImageButton
            android:id="@+id/buttonCancel"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/img_button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/bestScoreFixed"
        style="@style/BasicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:backgroundTint="#ACBBE4"
        app:cardCornerRadius="6dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFixed">

        <TextView
            android:id="@+id/bestScoresTextView"
            style="@style/BasicText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="4dp"
            app:autoSizeTextType="uniform"
            tools:text="340" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>